workshops/nkp-workshop/apps/storefront/base/networking/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-ingress
  namespace: demo-app
spec:
  hosts:
    - "*"
  gateways:
    - storefront-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80
